document alignment fix

--- a/src/styles.css
+++ b/src/styles.css
@@ -738,14 +738,14 @@ h3 a {
 .cursor-pointer{
   cursor: pointer !important;
 }
-@media screen and (max-width: 1021px){
+@media screen and (min-width: 1189px) and (max-width: 1299px){
 .content {
- min-height: 554px;
+ min-height: 610px;
 }
 }
-@media screen and (max-width: 1021px) and (max-width: 1488px){
+@media screen and (min-width: 1300px) and (max-width: 1510px){
   .content {
-   min-height: 610px;
+   min-height: 554px;
   }
   }
 
